Corrected Maths and Statistics link

--- a/subject-areas/index.html
+++ b/subject-areas/index.html
@@ -279,7 +279,7 @@ MathJax = {
 <li><a href="../index.html">Chemistry</a></li>
 <li><a href="../index.html">Legal studies</a></li>
 <li><a href="../index.html">Life sciences</a></li>
-<li><a href="../index.html">Mathematics and statistics</a></li>
+<li><a href="../maths-statistics/index.html">Mathematics and statistics</a></li>
 <li><a href="../index.html">Nursing</a></li>
 </ul>
 </div>
